1. Метод .of [#469499]